Prepared test4.ipynb

--- a/notebooks/other_preprocessing_interventions/test2.ipynb
+++ b/notebooks/other_preprocessing_interventions/test2.ipynb
@@ -353,6 +353,51 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   race  sex  Age (decade)=10  Age (decade)=20  Age (decade)=30  \\\n0   0.0  1.0              0.0              1.0              0.0   \n1   1.0  1.0              0.0              0.0              1.0   \n2   1.0  1.0              0.0              1.0              0.0   \n3   0.0  1.0              0.0              0.0              0.0   \n4   1.0  0.0              1.0              0.0              0.0   \n\n   Age (decade)=40  Age (decade)=50  Age (decade)=60  Age (decade)=>=70  \\\n0              0.0              0.0              0.0                0.0   \n1              0.0              0.0              0.0                0.0   \n2              0.0              0.0              0.0                0.0   \n3              1.0              0.0              0.0                0.0   \n4              0.0              0.0              0.0                0.0   \n\n   Education Years=6  Education Years=7  Education Years=8  Education Years=9  \\\n0                0.0                1.0                0.0                0.0   \n1                0.0                0.0                0.0                1.0   \n2                0.0                0.0                0.0                0.0   \n3                0.0                0.0                0.0                0.0   \n4                0.0                0.0                0.0                0.0   \n\n   Education Years=10  Education Years=11  Education Years=12  \\\n0                 0.0                 0.0                 0.0   \n1                 0.0                 0.0                 0.0   \n2                 0.0                 0.0                 1.0   \n3                 1.0                 0.0                 0.0   \n4                 1.0                 0.0                 0.0   \n\n   Education Years=<6  Education Years=>12  Income Binary  \n0                 0.0                  0.0            0.0  \n1                 0.0                  0.0            0.0  \n2                 0.0                  0.0            1.0  \n3                 0.0                  0.0            1.0  \n4                 0.0                  0.0            0.0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>race</th>\n      <th>sex</th>\n      <th>Age (decade)=10</th>\n      <th>Age (decade)=20</th>\n      <th>Age (decade)=30</th>\n      <th>Age (decade)=40</th>\n      <th>Age (decade)=50</th>\n      <th>Age (decade)=60</th>\n      <th>Age (decade)=&gt;=70</th>\n      <th>Education Years=6</th>\n      <th>Education Years=7</th>\n      <th>Education Years=8</th>\n      <th>Education Years=9</th>\n      <th>Education Years=10</th>\n      <th>Education Years=11</th>\n      <th>Education Years=12</th>\n      <th>Education Years=&lt;6</th>\n      <th>Education Years=&gt;12</th>\n      <th>Income Binary</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "def load_pickle(filepath: str):\n",
+    "    with open(filepath, 'rb') as pkl_file:\n",
+    "        obj = pickle.load(pkl_file)\n",
+    "    return obj\n",
+    "\n",
+    "\n",
+    "df_adult = load_pickle('/Users/denys_herasymuk/Downloads/adult_df.pd')\n",
+    "df_adult.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-28T14:27:27.541240Z",
+     "start_time": "2023-12-28T14:27:27.057618Z"
+    }
+   },
+   "id": "9f6c48c559c8b9df"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "aa2621b6f91c5332"
   }
  ],
  "metadata": {
