--- a/notebooks/other_preprocessing_interventions/test4.ipynb
+++ b/notebooks/other_preprocessing_interventions/test4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4b3c1acd",
+   "id": "f322eb92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "770c0215",
+   "id": "5124f68f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ac896a62",
+   "id": "e262c531",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4e1305f8",
+   "id": "efa02c6d",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9d42b728",
+   "id": "0096a0b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-28T12:21:17.665888Z",
@@ -95,7 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "45a960cd",
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ACSIncomeFolktablesDataset(StandardDataset):\n",
@@ -158,16 +160,29 @@
     "            postprocess=lambda x: np.nan_to_num(x, -1),\n",
     "        )\n",
     "        return problem"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5d4c3aaf6d60f348"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "id": "03310f82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data for 2018 1-Year person survey for PA...\n",
+      "\n",
+      "\n",
+      "Stats of Initial Dataset: \n",
+      "Train set: Difference in mean outcomes between unprivileged and privileged groups = -0.163666\n",
+      "Train set: Initial disparate impact in source dataset = 0.645390\n",
+      "Test set: Difference in mean outcomes between unprivileged and privileged groups = -0.433333\n",
+      "Test set: Initial disparate impact in source dataset = 0.277778\n"
+     ]
+    }
+   ],
    "source": [
     "privilege_mode = 'SEX'\n",
     "dd = ACSIncomeFolktablesDataset(protected_attr_name=privilege_mode)\n",
@@ -192,16 +207,29 @@
     "                                            privileged_groups=privileged_groups)\n",
     "print(\"Test set: Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_orig_test.mean_difference())\n",
     "print(\"Test set: Initial disparate impact in source dataset = %f\" % metric_orig_test.disparate_impact())"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "8e2c40258786d841"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "id": "ddbbb614",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 234. TiB for an array with shape (8028160, 4014080) and data type float64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-4a138cb0ca94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mdebias_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOptimPreproc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mOptTools\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptim_options\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mdebias_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdebias_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mtrain_repd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdebias_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform_Y\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/aif360/algorithms/transformer.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mwraps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0mnew_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0mnew_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/aif360/algorithms/preprocessing/optim_preproc.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, dataset, sep)\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m         \u001b[0;31m# Set features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m         self.OpT.set_features(D=self.protected_attribute_names,\n\u001b[0m\u001b[1;32m    111\u001b[0m                               \u001b[0mX\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX_feature_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m                               Y=self.Y_feature_names)\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/aif360/algorithms/preprocessing/optim_preproc_helpers/opt_tools.py\u001b[0m in \u001b[0;36mset_features\u001b[0;34m(self, D, X, Y)\u001b[0m\n\u001b[1;32m    180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    181\u001b[0m         \u001b[0;31m# Initialize mapping dataframe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 182\u001b[0;31m         self.dfP = pd.DataFrame(np.zeros((len(self.DXY_index),\n\u001b[0m\u001b[1;32m    183\u001b[0m                                           len(self.XY_index))),\n\u001b[1;32m    184\u001b[0m                                 index=self.DXY_index, columns=self.XY_index)\n",
+      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 234. TiB for an array with shape (8028160, 4014080) and data type float64"
+     ]
+    }
+   ],
    "source": [
     "from aif360.algorithms.preprocessing.optim_preproc_helpers.opt_tools import OptTools\n",
     "from aif360.algorithms.preprocessing import OptimPreproc\n",
@@ -225,21 +253,15 @@
     "                                                 privileged_groups=privileged_groups)\n",
     "print(\"\\nTRANSFORMED Train set: Difference in mean outcomes \"\n",
     "      \"between unprivileged and privileged groups = %f\" % metrics_train_dataset.mean_difference())"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c77937980eb85e7e"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b94a1d29",
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "a8c8136cec605719"
+   "source": []
   }
  ],
  "metadata": {
