Added uncertainty parity visualizations

--- a/notebooks/other_preprocessing_interventions/Adult_Example.ipynb
+++ b/notebooks/other_preprocessing_interventions/Adult_Example.ipynb
@@ -31,6 +31,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "               instance weights            features                       \\\n                                protected attribute                        \n                                               race  sex Age (decade)=10   \ninstance names                                                             \n0                           1.0                 0.0  1.0             0.0   \n1                           1.0                 1.0  1.0             0.0   \n2                           1.0                 1.0  1.0             0.0   \n3                           1.0                 0.0  1.0             0.0   \n4                           1.0                 1.0  0.0             1.0   \n...                         ...                 ...  ...             ...   \n48837                       1.0                 1.0  0.0             0.0   \n48838                       1.0                 1.0  1.0             0.0   \n48839                       1.0                 1.0  0.0             0.0   \n48840                       1.0                 1.0  1.0             0.0   \n48841                       1.0                 1.0  0.0             0.0   \n\n                                                                \\\n                                                                 \n               Age (decade)=20 Age (decade)=30 Age (decade)=40   \ninstance names                                                   \n0                          1.0             0.0             0.0   \n1                          0.0             1.0             0.0   \n2                          1.0             0.0             0.0   \n3                          0.0             0.0             1.0   \n4                          0.0             0.0             0.0   \n...                        ...             ...             ...   \n48837                      1.0             0.0             0.0   \n48838                      0.0             0.0             1.0   \n48839                      0.0             0.0             0.0   \n48840                      1.0             0.0             0.0   \n48841                      0.0             0.0             0.0   \n\n                                                                  \\\n                                                                   \n               Age (decade)=50 Age (decade)=60 Age (decade)=>=70   \ninstance names                                                     \n0                          0.0             0.0               0.0   \n1                          0.0             0.0               0.0   \n2                          0.0             0.0               0.0   \n3                          0.0             0.0               0.0   \n4                          0.0             0.0               0.0   \n...                        ...             ...               ...   \n48837                      0.0             0.0               0.0   \n48838                      0.0             0.0               0.0   \n48839                      1.0             0.0               0.0   \n48840                      0.0             0.0               0.0   \n48841                      1.0             0.0               0.0   \n\n                                                                      \\\n                                                                       \n               Education Years=6 Education Years=7 Education Years=8   \ninstance names                                                         \n0                            0.0               1.0               0.0   \n1                            0.0               0.0               0.0   \n2                            0.0               0.0               0.0   \n3                            0.0               0.0               0.0   \n4                            0.0               0.0               0.0   \n...                          ...               ...               ...   \n48837                        0.0               0.0               0.0   \n48838                        0.0               0.0               0.0   \n48839                        0.0               0.0               0.0   \n48840                        0.0               0.0               0.0   \n48841                        0.0               0.0               0.0   \n\n                                                                        \\\n                                                                         \n               Education Years=9 Education Years=10 Education Years=11   \ninstance names                                                           \n0                            0.0                0.0                0.0   \n1                            1.0                0.0                0.0   \n2                            0.0                0.0                0.0   \n3                            0.0                1.0                0.0   \n4                            0.0                1.0                0.0   \n...                          ...                ...                ...   \n48837                        0.0                0.0                0.0   \n48838                        1.0                0.0                0.0   \n48839                        1.0                0.0                0.0   \n48840                        1.0                0.0                0.0   \n48841                        1.0                0.0                0.0   \n\n                                                                          \\\n                                                                           \n               Education Years=12 Education Years=<6 Education Years=>12   \ninstance names                                                             \n0                             0.0                0.0                 0.0   \n1                             0.0                0.0                 0.0   \n2                             1.0                0.0                 0.0   \n3                             0.0                0.0                 0.0   \n4                             0.0                0.0                 0.0   \n...                           ...                ...                 ...   \n48837                         1.0                0.0                 0.0   \n48838                         0.0                0.0                 0.0   \n48839                         0.0                0.0                 0.0   \n48840                         0.0                0.0                 0.0   \n48841                         0.0                0.0                 0.0   \n\n               labels  \n                       \n                       \ninstance names         \n0                 0.0  \n1                 0.0  \n2                 1.0  \n3                 1.0  \n4                 0.0  \n...               ...  \n48837             0.0  \n48838             1.0  \n48839             0.0  \n48840             0.0  \n48841             1.0  \n\n[48842 rows x 20 columns]"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_orig = load_preproc_data_adult(['race'])\n",
+    "dataset_orig"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-28T15:33:32.820840Z",
+     "start_time": "2023-12-28T15:33:32.586473Z"
+    }
+   },
+   "id": "4c61ef3bcfe47179"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "b7da42c4",
    "metadata": {
@@ -41,8 +67,6 @@
    },
    "outputs": [],
    "source": [
-    "dataset_orig = load_preproc_data_adult(['race'])\n",
-    "\n",
     "dataset_orig_train, dataset_orig_test = dataset_orig.split([0.7], shuffle=True)\n",
     "\n",
     "privileged_groups = [{'race': 1}] # White\n",
@@ -161,7 +185,7 @@
     "    \"clist\": [0.99, 1.99, 2.99],\n",
     "    \"dlist\": [.1, 0.05, 0]\n",
     "}\n",
-    "    \n",
+    "\n",
     "OP = OptimPreproc(OptTools, optim_options)\n",
     "\n",
     "OP = OP.fit(dataset_orig_train)\n",
