Checked LFR for student performance

--- a/notebooks/diff_fairness_interventions_exp/LFR/LFR_acs_income/Student_Performance_Por_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/LFR/LFR_acs_income/Student_Performance_Por_Batch1.ipynb
@@ -113,7 +113,7 @@
     "import copy\n",
     "\n",
     "from virny.utils.custom_initializers import create_config_obj\n",
-    "from virny.datasets import ACSIncomeDataset\n",
+    "from virny.datasets import StudentPerformancePortugueseDataset\n",
     "\n",
     "from configs.constants import TEST_SET_FRACTION, EXPERIMENT_SEEDS\n",
     "from configs.models_config_for_tuning import get_folktables_employment_models_params_for_tuning\n",
@@ -348,8 +348,7 @@
     }
    ],
    "source": [
-    "data_loader = ACSIncomeDataset(state=['GA'], year=2018, with_nulls=False,\n",
-    "                               subsample_size=15_000, subsample_seed=42)\n",
+    "data_loader = StudentPerformancePortugueseDataset()\n",
     "data_loader.X_data.head()"
    ]
   },
