Prepared LFR for ACS Income

--- a/notebooks/diff_fairness_interventions_exp/LFR/LFR_acs_income/ACS_Income_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/LFR/LFR_acs_income/ACS_Income_Batch1.ipynb
@@ -164,7 +164,6 @@
     "EXPERIMENT_NAME = 'LFR_acs_income'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIR_INTERVENTION_PARAMS_LST = [{'k': 5, 'Ax': 0.01, 'Ay': 1.0, 'Az': 50.0}]\n",
-    "# FAIR_INTERVENTION_PARAMS_LST = [{'k': 10, 'Ax': 0.1, 'Ay': 1.0, 'Az': 2.0}]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', 'LFR', EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -248,8 +247,8 @@
     "import uuid\n",
     "\n",
     "custom_table_fields_dct = {\n",
-    "    # 'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': '1911b0c5-2c41-4b38-83e0-c63d1de7aa0b',\n",
+    "    'session_uuid': str(uuid.uuid4()),\n",
+    "    # 'session_uuid': '1911b0c5-2c41-4b38-83e0-c63d1de7aa0b',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
@@ -284,10 +283,8 @@
     }
    ],
    "source": [
-    "# data_loader = ACSIncomeDataset(state=['GA'], year=2018, with_nulls=False,\n",
-    "#                                subsample_size=15_000, subsample_seed=42)\n",
     "data_loader = ACSIncomeDataset(state=['GA'], year=2018, with_nulls=False,\n",
-    "                               subsample_size=5_000, subsample_seed=42)\n",
+    "                               subsample_size=15_000, subsample_seed=42)\n",
     "data_loader.X_data.head()"
    ]
   },
